--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,7 +7,7 @@ import { SITE } from "@consts";
 <header>
   <Container>
     <div class="flex flex-wrap gap-y-2 justify-between">
-      <Link href="/aboutcycling" underline={false}>
+      <Link href="/" underline={false}>
         <div class="font-semibold">
           {SITE.NAME}
         </div>
@@ -19,14 +19,14 @@ import { SITE } from "@consts";
         <span>
           {`/`}
         </span>
-        <Link href="/work">
-          work
+        <Link href="/bikes">
+          bikes
         </Link>
         <span>
           {`/`}
         </span>
-        <Link href="/projects">
-          projects
+        <Link href="/events">
+          events
         </Link>
       </nav>
     </div>
