--- a/src/pages/events/index.astro
+++ b/src/pages/events/index.astro
@@ -3,22 +3,22 @@ import { getCollection } from "astro:content";
 import PageLayout from "@layouts/PageLayout.astro";
 import Container from "@components/Container.astro";
 import ArrowCard from "@components/ArrowCard.astro";
-import { PROJECTS } from "@consts";
+import { EVENTS } from "@consts";
 
-const projects = (await getCollection("projects"))
+const events = (await getCollection("events"))
   .filter(project => !project.data.draft)
   .sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf());
 ---
 
-<PageLayout title={PROJECTS.TITLE} description={PROJECTS.DESCRIPTION}>
+<PageLayout title={EVENTS.TITLE} description={EVENTS.DESCRIPTION}>
   <Container>
     <div class="space-y-10">
       <div class="animate font-semibold text-black dark:text-white">
-        Projects
+        Events
       </div>
       <ul class="animate flex flex-col gap-4">
         {
-          projects.map((project) => (
+          events.map((project) => (
             <li>
               <ArrowCard entry={project}/>
             </li>
