--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -35,6 +35,9 @@ const { title, description, image = "/nano.png" } = Astro.props;
 <link rel="preload" href={lora400} as="font" type="font/woff2" crossorigin/>
 <link rel="preload" href={lora600} as="font" type="font/woff2" crossorigin/>
 
+<script data-goatcounter="https://roastpotatoes.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
+
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
 
